<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    app:cardCornerRadius="24dp"
    android:elevation="6dp"
    android:transitionName="@string/card_transition">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imagemCelebridade"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imagem_celebridade_descricao"
            android:scaleType="centerCrop"
            android:src="@drawable/beyonce"
            android:transitionName="@string/imagem_transition"
            app:layout_constraintDimensionRatio="w,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nomeCelebridade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            android:transitionName="@string/nome_transition"
            app:layout_constraintEnd_toEndOf="@id/imagemCelebridade"
            app:layout_constraintStart_toStartOf="@id/imagemCelebridade"
            app:layout_constraintTop_toBottomOf="@id/imagemCelebridade"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Celebridade" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>