<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CelebridadeActivity"
    android:background="@color/background"
    android:transitionName="@string/card_transition"
    android:clipChildren="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/imagemCelebridade"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/imagem_celebridade_descricao"
                    android:src="@drawable/beyonce"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.9"
                    android:transitionName="@string/imagem_transition" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botaoNovaFrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            android:layout_marginEnd="16dp"
            app:layout_anchor="@id/appBarLayout"
            app:layout_anchorGravity="right|bottom"/>

<!--        <TextView-->
<!--            android:id="@+id/nomeCelebridade"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/bg_corner"-->
<!--            android:elevation="4dp"-->
<!--            android:paddingStart="16dp"-->
<!--            android:paddingTop="8dp"-->
<!--            android:paddingEnd="16dp"-->
<!--            android:paddingBottom="8dp"-->
<!--            android:textColor="@color/textColor"-->
<!--            android:textSize="22sp"-->
<!--            android:transitionName="@string/nome_transition"-->
<!--            android:layout_gravity="top|center_horizontal"-->
<!--            app:layout_scrollFlags="scroll|enterAlways"-->
<!--            app:layout_anchor="@id/scrollContainerFrases"-->
<!--            app:layout_anchorGravity="top|center_horizontal"-->
<!--            tools:text="CelebridadeEntity" />-->

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollContainerFrases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerFrases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <!-- FRASES -->
                <ImageView
                    android:id="@+id/aspas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_quotation_marks"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/frase"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/example_text"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="32dp"
                    android:textSize="24sp"
                    android:textColor="@color/textColor"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="@id/aspas"
                    app:layout_constraintStart_toEndOf="@+id/aspas"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>